--- a/package.json
+++ b/package.json
@@ -8,15 +8,23 @@
   "dependencies": {
     "angular": "^1.5.3",
     "angular-ui-router": "^0.2.18",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
     "bootstrap": "^3.3.6",
     "bootstrap-select": "^1.10.0",
+    "debug": "^2.2.0",
+    "express": "^4.13.4",
+    "express-session": "^1.13.0",
     "font-awesome": "^4.5.0",
     "install": "^0.6.1",
     "jquery": "^2.2.2",
     "jquery-ui": "^1.10.5",
     "mongoose": "^4.4.10",
-    "npm": "^3.8.3"
+    "morgan": "^1.7.0",
+    "npm": "^3.8.3",
+    "passport": "^0.3.2",
+    "passport-http": "^0.3.0",
+    "passport-local": "^1.0.0"
   },
   "description": "",
   "main": "startup.js",
