--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "angular": "^1.5.3",
+    "angular-bootstrap": "^0.12.2",
+    "angular-ui-bootstrap": "^1.2.5",
     "angular-ui-router": "^0.2.18",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
