--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.15.0",
     "bootstrap": "^3.3.6",
     "bootstrap-select": "^1.10.0",
+    "cookie-parser": "^1.4.1",
     "debug": "^2.2.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
