--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "dependencies": {
     "angular": "^1.5.3",
     "angular-bootstrap": "^0.12.2",
+    "angular-flash-alert": "^2.2.7",
     "angular-ui-bootstrap": "^1.2.5",
     "angular-ui-router": "^0.2.18",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
     "bootstrap": "^3.3.6",
     "bootstrap-select": "^1.10.0",
+    "connect-mongo": "^1.1.0",
     "cookie-parser": "^1.4.1",
     "debug": "^2.2.0",
     "express": "^4.13.4",
