--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "morgan": "^1.7.0",
     "npm": "^3.8.3",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.0",
     "passport-http": "^0.3.0",
     "passport-http-bearer": "^1.0.1",
     "passport-jwt": "^2.0.0",
