--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap-select": "^1.10.0",
     "connect-mongo": "^1.1.0",
     "cookie-parser": "^1.4.1",
+    "cors": "^2.7.1",
     "debug": "^2.2.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
